mishap with conda fixed

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -17,6 +17,7 @@ jobs:
       with:
         activate-environment: jupyter-book
         environment-file: dev-environment.yml
+        auto-activate-base: false
 
     - name: Build the book
       run: |
