--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,6 +21,7 @@ jobs:
 
     - name: Build the book
       run: |
+        conda activate jupyter-book
         jupyter-book build .
 
     - name: GitHub Pages action
