--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -12,16 +12,17 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Set up Conda
-      uses: conda-incubator/setup-miniconda@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
       with:
-        activate-environment: jupyter-book
-        environment-file: dev-environment.yml
-        auto-activate-base: false
+        python-version: 3.9
+
+    - name: Install dependencies
+      run: |
+        pip install -r dev-requirements.txt
 
     - name: Build the book
       run: |
-        conda activate jupyter-book
         jupyter-book build .
 
     - name: GitHub Pages action
